src/objects/Co_Op_Activity__c/Co_Op_Activity__c.object-meta.xml
<CustomObject>
    <label>Co-op Activity</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Co-op Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>