src/objects/Co_Op_Activity__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Collateral (Co-branded Brochures, Data Sheets, etc.)</fullName>
            </value>
            <value>
                <fullName>Demonstration Equipment</fullName>
            </value>
            <value>
                <fullName>Direct Mail / E-mail Campaign / Newsletter</fullName>
            </value>
            <value>
                <fullName>Funded Head (Consultant / System Architect)</fullName>
            </value>
            <value>
                <fullName>Funded Head (Sales Champion)</fullName>
            </value>
            <value>
                <fullName>Participation in IT, Applications and/or Telecoms Event</fullName>
            </value>
            <value>
                <fullName>Participation in Nokia Event (i.e. Nokia Partner Conference)</fullName>
            </value>
            <value>
                <fullName>Promotional Items (Co- branded)</fullName>
            </value>
            <value>
                <fullName>Public Relations / Press Release</fullName>
            </value>
            <value>
                <fullName>Sales Incentive Program (Partner Run)</fullName>
            </value>
            <value>
                <fullName>Seminars &amp; Road Shows (Partner developed and/or sponsored)</fullName>
            </value>
            <value>
                <fullName>Telemarketing</fullName>
            </value>
            <value>
                <fullName>Trade Shows</fullName>
            </value>
            <value>
                <fullName>Training(sales, pre-sales and post-sales)</fullName>
            </value>
            <value>
                <fullName>Web Marketing and Development (Website / Microsite)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>