src/objects/Co_Op_Activity__c/fields/Claims_Passed_Audit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Claims_Passed_Audit_Amount__c</fullName>
    <label>Claims Passed Audit Amount</label>
    <summarizedField>Claim__c.Claim_Amount_Passed_Audit__c</summarizedField>
    <summaryForeignKey>Claim__c.Activity_Number__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>