src/objects/Co_Op_Activity__c/fields/On_Hold_Approver_email__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Approver_email__c</fullName>
    <formula>On_Hold_Approver_del__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Hold Approver email</label>
    <type>Text</type>
</CustomField>