src/objects/Co_Op_Activity__c/recordTypes/Co_op_Activity_Read_only.recordType-meta.xml
<RecordType>
    <fullName>Co_op_Activity_Read_only</fullName>
    <active>true</active>
    <label>Co-op Activity-Read only</label>
</RecordType>