src/objects/Co_Op_Activity__c/validationRules/ADMIN_AND_PRM_CAN_CANCEL_THE_ACTIVITY.validationRule-meta.xml
<ValidationRule>
    <fullName>ADMIN_AND_PRM_CAN_CANCEL_THE_ACTIVITY</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 


ISPICKVAL( Activity_Status__c , &apos;Cancelled&apos;), 
ISCHANGED(Activity_Status__c ) , 
$Permission.PRM_Co_Op_Internal_Users_Permission_Set, 
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
    <errorMessage>Only Nokia Co-op Administrator and Partner Users are able to cancel Activities prior to submitting claims</errorMessage>
</ValidationRule>