src/objects/Co_Op_Activity__c/validationRules/Approved_amount_not_greater_than_request.validationRule-meta.xml
<ValidationRule>
    <fullName>Approved_amount_not_greater_than_request</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 

Activity_Approved_Amount__c &gt; Reimbursement_Amount_Requested__c, 
NOT(AND(OnHold_Reimbursement_Amount__c &gt; 0, Reimbursement_Amount_Requested__c = 0)), 
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;) 
) 
)</errorConditionFormula>
    <errorMessage>Reimbursement Approved Amount should not be greater than Reimbursement requested Amount, please correct Reimbursement Amount Approved.</errorMessage>
</ValidationRule>