src/objects/Co_Op_Activity__c/validationRules/Exception_Details_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exception_Details_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISBLANK( Exception_Details__c ) , 
!(ISBLANK( Exception__c )), 
!(INCLUDES(Exception__c,&apos;Other&apos;)), 
NOT( 
OR(  
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
    <errorDisplayField>Exception_Details__c</errorDisplayField>
    <errorMessage>Please write the details about the exception activity that would help the Approver(s) approve the request.</errorMessage>
</ValidationRule>