src/objects/Co_Op_Activity__c/validationRules/Manual_Status_Update_Not_Allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Status_Update_Not_Allowed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(bypass_last_claim_validation__c),
	Text(Activity_Status__c) != &apos;New&apos;,
	Text(Activity_Status__c) != &apos;Cancelled&apos;,
	ISCHANGED(Activity_Status__c),
	( 
		OR( 
			$Profile.Name = &apos;PRM Partner Community User Login&apos;, 
			$Profile.Name = &apos;PRM Partner Relationship Manager Login&apos;	
		) 
		) 
	)</errorConditionFormula>
    <errorDisplayField>Activity_Status__c</errorDisplayField>
    <errorMessage>You are not allowed to select status other than &quot;New&quot; and &quot;Cancelled&quot;</errorMessage>
</ValidationRule>