src/objects/Co_Op_Activity__c/validationRules/On_Hold_Reason_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Reason_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
On_Hold__c = TRUE,
ISBLANK(On_Hold_Reason__c),
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
    <errorDisplayField>On_Hold_Reason__c</errorDisplayField>
    <errorMessage>Please give the On Hold Reason</errorMessage>
</ValidationRule>