src/objects/Co_Op_Activity__c/validationRules/Requeste_amount_not_greater_than_Cost.validationRule-meta.xml
<ValidationRule>
    <fullName>Requeste_amount_not_greater_than_Cost</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
Cost_of_Activity__c &lt; Reimbursement_Amount_Requested__c, 
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;) 
) 
)</errorConditionFormula>
    <errorMessage>Reimbursement Amount Requested should not be greater than Cost of Activity, please correct.</errorMessage>
</ValidationRule>