src/objects/Co_Op_Activity__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISNEW(),
ISCHANGED(Start_Date__c )),
(Start_Date__c - TODAY() &lt;15) ,
NOT(INCLUDES( Exception__c , &apos;Activity Start Date occurred in the past&apos;)),
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
    <errorMessage>Please select a date 15 days Prior to Start Date of the Activity. 
Exception: If the activity happened in past, please select the date in past and select the Exception as ‘Activity Start Date occurred in the Past’</errorMessage>
</ValidationRule>