src/objects/Co_Op_Activity__c/validationRules/Validation_manual_status_after_rejection.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_manual_status_after_rejection</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Text(Activity_Status__c) = &apos;Rejected&apos;,
ISCHANGED(Name))</errorConditionFormula>
    <errorMessage>You are not allowed to Change the Activity Details after it is rejected</errorMessage>
</ValidationRule>