src/objects/Co_Op_Activity__c/validationRules/Validation_on_Activity_cancellation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Activity_cancellation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Claim_count_for_cancellation__c  &gt; 0,
ISCHANGED( Activity_Status__c ),
ISPICKVAL(Activity_Status__c ,&apos;Cancelled&apos;),
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) 
)</errorConditionFormula>
    <errorMessage>You are not allowed to cancel the activity because one or more of the associated claims have already been submitted for Audit, passed Audit or were reimbursed</errorMessage>
</ValidationRule>