src/objects/Co_Op_Activity__c/validationRules/Validation_on_blank_activity_amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_blank_activity_amount</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISNEW(), 
OR( 
ISBLANK(Cost_of_Activity__c), 
Cost_of_Activity__c = 0.00, Reimbursement_Amount_Requested__c = 0.00
) 
 
)</errorConditionFormula>
    <errorMessage>Please enter non zero amount in &apos;Cost of Activity&apos; and &apos;Reimbursement Amount Requested	&apos;</errorMessage>
</ValidationRule>