src/objects/Co_Op_Activity__c/validationRules/Validation_on_manual_change_after_locked.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_manual_change_after_locked</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Name ),
OR(ISPICKVAL( Activity_Status__c ,&apos;Claimable&apos;),
ISPICKVAL( Activity_Status__c ,&apos;Claimed&apos;),
ISPICKVAL( Activity_Status__c ,&apos;Approved&apos;),
ISPICKVAL( Activity_Status__c ,&apos;Closed&apos;),
ISPICKVAL( Activity_Status__c ,&apos;Expired&apos;),
ISPICKVAL( Activity_Status__c ,&apos;Cancelled&apos;)))</errorConditionFormula>
    <errorMessage>You are not allowed to Change the Activity Name after it is Locked</errorMessage>
</ValidationRule>