src/objects/Co_Op_Activity__c/validationRules/Validation_on_Other_Exception_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_Other_Exception_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
INCLUDES( Exception__c , &apos;Other&apos;) , 
ISBLANK( If_Other_Exception_Please_Specify__c ) , 
NOT( 
OR( 
$Profile.Name = &apos;System Administrator&apos;, 
$Profile.Name = &apos;Data Loader Profile&apos;, 
$Profile.Name = &apos;Nokia Admin Profile&apos;, 
$Profile.Name = &apos;Global Process Admin Profile&apos;	
) 
) )</errorConditionFormula>
    <errorDisplayField>If_Other_Exception_Please_Specify__c</errorDisplayField>
    <errorMessage>Please write the other exception as you have selected &quot;Other&quot; in Exception field</errorMessage>
</ValidationRule>