src/objects/Co_Op_Activity__c/listViews/Activities_In_Approval.listView-meta.xml
<ListView>
    <fullName>Activities_In_Approval</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Activity_Expire_Date__c</columns>
    <columns>Reimbursement_Amount_Requested__c</columns>
    <columns>Partner_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activity_Status__c</field>
        <operation>equals</operation>
        <value>Pending Approval</value>
    </filters>
    <label>Activities Submitted for Approval</label>
    <language>en_US</language>
</ListView>