src/objects/Co_Op_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Activity_Status__c</columns>
    <columns>Reimbursement_Amount_Requested__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Activity_Expire_Date__c</columns>
    <columns>Partner_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>