src/objects/Co_Op_Activity__c/listViews/Approved_Activites.listView-meta.xml
<ListView>
    <fullName>Approved_Activites</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Activity_Expire_Date__c</columns>
    <columns>Reimbursement_Amount_Requested__c</columns>
    <columns>Activity_Approved_Amount__c</columns>
    <columns>Partner_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Activity_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Activites</label>
    <language>en_US</language>
</ListView>